@@ -3,6 +3,13 @@ NEWS - OpenPrinting CUPS Filters v1.0.73 - 2015-08-18
 
 CHANGES IN V1.0.74
 
+	- cups-browsed, implicitclass: If remote queues disappear or
+	  cups-browsed shuts down and a cups-browsed-generated queue still
+	  has jobs and needs to be kept therefore, disable it and re-enable
+	  it when cups-browsed starts again and/or the remote queue(s) re-
+	  appear(s). This avoids repeated retries of the jobs while the
+	  remote server is not available, causing unneeded system load and
+	  battery consumption.
 	- cups-browsed: After polling info from remote CUPS servers to find
 	  the best destination job, set the default CUPS server back to local.
 
